fixed few issues